# test

./: README.md  code.leech.PyDemo.json  meson.build
data/: code.leech.PyDemo.desktop.in  code.leech.PyDemo.gschema.xml  code.leech.PyDemo.metainfo.xml.in  code.leech.PyDemo.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py  main.py  meson.build  pydemo.gresource.xml  pydemo.in  theme.py  theme.ui  window.py  window.ui
src/gtk/: style.css
